--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-matplotlib==3.5.0
-numpy==1.23.5
-pandas==1.3.4
-periodictable==1.6.1
-scipy==1.7.3
-seaborn==0.12.2
-setuptools==45.2.0
-tqdm==4.65.0
+numpy>=1.24.3
+pandas>=2.0.3
+tqdm>=4.66.1
